@startuml github-app-config

package GitHub {
    entity UserOrOrganisation {
        name: String
        repositories: List<Repository>
    }

    object AppOwner {

    }

    object InstallationOwner {

    }

    entity Repository {
        owner: UserOrOrganisation
        name: String
    }

    entity Installation {
        id: int
        app_id: int
        owner: UserOrOrganisation
        repositories: List<Repository>
    }

    entity App {
        id: int
        name: String
        owner: UserOrOrganisation
        client_id: String
        client_secret: String
        installations: List<Installation>
        private_keys: List<pem>
    }
}

package Spectacular {
    object UI {
        GITHUB_APP_INSTALLATION_ID
    }

    object Auth {
        LOGINSRV_GITHUB
    }

    object Backend {
        GITHUB_APP_ID
        GITHUB_APP_PRIVATE_KEY_FILE_PATH
    }
}

' actor User

' GitHub object relationships
UserOrOrganisation <|-- AppOwner
UserOrOrganisation <|-- InstallationOwner
InstallationOwner ||--o{ Installation
AppOwner ||--o{ App
InstallationOwner ||--o{ Repository
App ||-o{ Installation
Installation }o--o{ Repository

' GitHub objects to Spectacular config mappings
Installation ..> UI : "installation id"
App ..> Auth : "client id and secret"
App ..> Backend : "app id and private key"

@enduml